--- a/CustomRPC/About.vi.resx
+++ b/CustomRPC/About.vi.resx
@@ -117,6 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="labelMadeBy.Location" type="System.Drawing.Point, System.Drawing">
+    <value>146, 93</value>
+  </data>
+  <data name="labelMadeBy.Size" type="System.Drawing.Size, System.Drawing">
+    <value>211, 19</value>
+  </data>
   <data name="labelMadeBy.Text" xml:space="preserve">
     <value>Được làm bởi: maximmax42</value>
   </data>
