--- a/CustomRPC/UpdatePrompt.pl.resx
+++ b/CustomRPC/UpdatePrompt.pl.resx
@@ -117,42 +117,36 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="error" xml:space="preserve">
-    <value>Klaida</value>
+  <data name="buttonUpdate.Text" xml:space="preserve">
+    <value>Tak</value>
   </data>
-  <data name="errorNoID" xml:space="preserve">
-    <value>Nenurodytas ID!</value>
+  <data name="buttonNotNow.Text" xml:space="preserve">
+    <value>Nie teraz</value>
   </data>
-  <data name="errorUpdateFailed" xml:space="preserve">
-    <value>Atsisiunčiant ar diegiant atnaujinimą įvyko klaida.
-Paspauskite „Taip“, jei norite bandyti dar kartą, arba „Ne“, jei norite atsisiųsti rankiniu būdu.</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="labelQuestion.Size" type="System.Drawing.Size, System.Drawing">
+    <value>182, 14</value>
   </data>
-  <data name="firstTimeRun" xml:space="preserve">
-    <value>Paleidimas pirma kartą</value>
+  <data name="labelQuestion.Text" xml:space="preserve">
+    <value>Chciałbyś pobrać tą aktualizacje?</value>
   </data>
-  <data name="firstTimeRunText" xml:space="preserve">
-    <value>Ar norėtumėte atidaryti instrukcijas?
-Galite jį atidaryti bet kuriuo metu, eidami į Pagalba -&gt; Atidaryti instrukcijas arba paspausdami F1.</value>
+  <data name="checkBoxNeverNotify.Size" type="System.Drawing.Size, System.Drawing">
+    <value>257, 18</value>
   </data>
-  <data name="information" xml:space="preserve">
-    <value>Informacija</value>
+  <data name="checkBoxNeverNotify.Text" xml:space="preserve">
+    <value>Nigdy nie sprawdzaj uaktualnień ponownie</value>
   </data>
-  <data name="statusConnected" xml:space="preserve">
-    <value>Prisijungta</value>
+  <data name="labelVersionsText.Text" xml:space="preserve">
+    <value>Aktualna wersja: 
+Najnowsza wersja:</value>
   </data>
-  <data name="statusConnecting" xml:space="preserve">
-    <value>Jungiamasi...</value>
+  <data name="buttonSkipUpdate.Size" type="System.Drawing.Size, System.Drawing">
+    <value>128, 23</value>
   </data>
-  <data name="statusConnectionFailed" xml:space="preserve">
-    <value>Prisijungimas ne sėkmingas (ar Discord veikia?)</value>
+  <data name="buttonSkipUpdate.Text" xml:space="preserve">
+    <value>Pomiń tą aktualizacje</value>
   </data>
-  <data name="statusDisconnected" xml:space="preserve">
-    <value>Atsijungta</value>
-  </data>
-  <data name="statusError" xml:space="preserve">
-    <value>Prisijungimo Klaida (Blogas ID?)</value>
-  </data>
-  <data name="errorInvalidURL" xml:space="preserve">
-    <value>Neteisingas URL nurodytas mygtukams arba tekstas per ilgas!</value>
+  <data name="$this.Text" xml:space="preserve">
+    <value>Jest dostępna nowa aktualizacja</value>
   </data>
 </root>
